- 04: Some mis-spelled messages corrected <2>
- 04: Executor stacktrace now also shows arguments of top-level subroutine <2>
- 04: #348 Python export now translates Parallel sections, using threading module <2>
- 04: #348 C++ export now translates Parallel sections, using class std::thread <2>
- 04: #348 C# export now translates Parallel sections, using System.Threading <2>
- 04: Bugfix #349: Generators hadn't coped with involved recursive subroutines <2>
- 04: Enh. #259/#335: Type info retrieval for code export enabled across CALLs <2>
- 04: Issue #350: OUTPUT instruction translation to Python was obsolete <2>

Version: 3.26 (2017.01.06)
- 01: Issue #213: FOR transmutation now inserts WHILE parser preferences <2>
- 01: Issue #213: Selected state of FOR transmutation result now visible <2>
- 01: Bugfix #241: Translation bugs for element editor mended <2>
- 01: Bugfix #243: Forgotten translations for some message boxes [Rolf Schmidt]<2>
- 01: Bugfix #244: Flawed logic for the save actions mended <2>
- 01: Bugfix #246: Executor now checks conditions for Boolean results <2>
- 01: Issue #245: Browser launching workaround for Linux systems [Rolf Schmidt]2
- 01: Bugfix #247: Defective BASH export of ENDLESS loops [Rolf Schmidt]2
- 01: Issue #248: Linux workaround for setting breakpoint triggers <2>
- 01: Issue #248: Linux workaround for number conversions in Locales and Executor <2>
- 01: Enh. #249: New Analyser check for subroutine argument parenthesis <2>
- 01: Analyser preferences order modified <2>
- 01: Enh. #250: FOR/FOR-IN loop editor partially redesigned <2>
- 01: Bugfix #251: Look and feel problems with Executor console window <2>
- 01: Bugfix #252: Analyser FOR loop check (14) should tolerate ":=" vs "<-" <2>
- 01: Saved diagrams now prepared for #253 (parser info included) <2>
- 01: Bugfix #254: CASE execution failed when parser keywords were used <2>
- 01: Enh. #255: Analyser now names the assumed loop variables if supernumerous <2>